--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "version": "1.0.1",
   "private": true,
   "dependencies": {
-    "gh-pages": "^3.2.0",
+    "gh-pages": "^3.2.0"
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
