--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "1.0.1",
   "private": true,
   "dependencies": {
-    "gh-pages": "^3.2.0"
+    "gh-pages": "^3.2.0",
+    "upper-case": "^2.0.2"
   },
   "scripts": {
     "predeploy": "npm run build",
