--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.1",
   "private": true,
   "dependencies": {
+    "formidable": "^1.2.2",
     "gh-pages": "^3.2.0",
     "upper-case": "^2.0.2"
   },
