--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "formidable": "^1.2.2",
     "gh-pages": "^3.2.0",
+    "mongodb": "^3.6.9",
     "upper-case": "^2.0.2"
   },
   "scripts": {
